--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap");
 @import "tailwindcss";
-
+body {
+  font-family: "Alan Sans", sans-serif;
+}
 .product:hover .add_to_cart {
   display: flex;
   transition: 0.3s;
